# FutureSDR

examples/lora/src/: transmitter.rs
examples/protocol_detector/: .gitignore  Cargo.toml  norm_vector_test.rs
examples/protocol_detector/src/: Test.RS  detector.rs  lib.rs  multi_port_inserter.rs  multi_protocol_inserter.rs  protocol_detector_fft.rs  simple_tag_inserter.rs  test_realistic_fft.rs  zc_detect.rs  zc_pad.rs
examples/protocol_detector/src/py/: functions.py  pattern_analyzer.py  performance_test.py  plot.py  snr_test.py
examples/protocol_detector/src/py/myenv/: pyvenv.cfg
examples/protocol_detector/tests/: multi_protocol_test.rs  realistic.rs  realistic_fft.rs  test_multi_protocol_detection.rs  test_multi_protocol_inserter.rs  test_multi_protocol_switching.rs  test_protocol_detector_fft.rs  zadoff_chu_tests.rs
examples/zigbee/src/: decoder.rs
