[package]
name = "protocol_detector"
version = "0.1.0"
edition = "2021"
default-run = "loopback"

[workspace]

[[bin]]
name = "zc"
path = "src/bin/zc.rs"

[[bin]]
name = "loopback"
path = "src/bin/loopback.rs"

[features]
default = ["soapy"]
aaronia_http = ["futuresdr/aaronia_http"]
soapy = ["futuresdr/soapy"]

[dependencies]

clap = { version = "4", features = ["derive"] }
crc32fast = "1.3"
futuresdr = { path = "../..", features = ["seify"] }
rand = "0.8"
rand_distr = "0.4"
byteorder = "1.4"
rustfft = "6.2.0"  # oder die neueste Version, falls verfügbar
num-complex = "0.4"  # oder die neueste Version, falls verfügbar"
[dependencies.wlan]
path = "../wlan"
[dependencies.lora]
path = "../lora"
[dependencies.zigbee]
path = "../zigbee"
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
gloo-net = "0.4"
leptos = { version = "0.5", features = ["csr", "nightly"] }
log = "0.4"
prophecy = { path = "../../crates/prophecy" }
serde_json = "1.0"
